gcc/testsuite/rust/rustc/ui/coherence/coherence-overlap-negate-not-use-feature-gate_dg.rs
use std::ops::DerefMut;

trait Foo {}
impl<T: DerefMut> Foo for T {}
impl<U> Foo for &U {}
// { dg-error ".E0119." "" { target *-*-* } .-1 }

fn main() {}

